--- a/Check WD kulturpersoner uppsalakyrkogardar.ipynb
+++ b/Check WD kulturpersoner uppsalakyrkogardar.ipynb
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2023-02-16 10:00:29.897586\n"
+      "Last run:  2025-02-11 00:54:16.202202\n"
      ]
     }
    ],
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "131  antal poster\n"
+      "133  antal poster\n"
      ]
     }
    ],
@@ -164,30 +164,30 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Anita Nathorst</td>\n",
-       "      <td>anita-nathorst</td>\n",
+       "      <td>Alfred Dahlgren</td>\n",
+       "      <td>alfred-dahlgren</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Henri Osti</td>\n",
-       "      <td>henri-osti</td>\n",
+       "      <td>Rosalie Olivecrona</td>\n",
+       "      <td>rosalie-olivecrona</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Fadime Sahindal</td>\n",
-       "      <td>fadime-sahindal</td>\n",
+       "      <td>Hans Rosling</td>\n",
+       "      <td>hans-rosling</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  kulturgravname              href\n",
-       "0  Digitala kyrkogårdsvandringar   digitalvandring\n",
-       "1                             SV  #weglot_switcher\n",
-       "2                 Anita Nathorst    anita-nathorst\n",
-       "3                     Henri Osti        henri-osti\n",
-       "4                Fadime Sahindal   fadime-sahindal"
+       "                  kulturgravname                href\n",
+       "0  Digitala kyrkogårdsvandringar     digitalvandring\n",
+       "1                             SV    #weglot_switcher\n",
+       "2                Alfred Dahlgren     alfred-dahlgren\n",
+       "3             Rosalie Olivecrona  rosalie-olivecrona\n",
+       "4                   Hans Rosling        hans-rosling"
       ]
      },
      "execution_count": 4,
@@ -275,17 +275,17 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 122 entries, 0 to 121\n",
+      "RangeIndex: 124 entries, 0 to 123\n",
       "Data columns (total 5 columns):\n",
       " #   Column       Non-Null Count  Dtype \n",
       "---  ------       --------------  ----- \n",
-      " 0   person       122 non-null    object\n",
-      " 1   qid          122 non-null    object\n",
-      " 2   personLabel  122 non-null    object\n",
-      " 3   refURL       122 non-null    object\n",
-      " 4   href         122 non-null    object\n",
+      " 0   person       124 non-null    object\n",
+      " 1   qid          124 non-null    object\n",
+      " 2   personLabel  124 non-null    object\n",
+      " 3   refURL       124 non-null    object\n",
+      " 4   href         124 non-null    object\n",
       "dtypes: object(5)\n",
-      "memory usage: 4.9+ KB\n"
+      "memory usage: 5.0+ KB\n"
      ]
     }
    ],
@@ -300,115 +300,107 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-7-7b80f6f28e4d>:6: FutureWarning: Passing a set as an indexer is deprecated and will raise in a future version. Use a list instead.\n",
-      "  HTML(WDKulturGravar[{'WD','personLabel','kulturperson'}].tail(15).to_html(escape=False))\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>WD</th>\n",
        "      <th>personLabel</th>\n",
        "      <th>kulturperson</th>\n",
-       "      <th>WD</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>107</th>\n",
+       "      <th>109</th>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q919826#P119'>WD Q919826</a></td>\n",
        "      <td>Rutger Sernander</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/rutger-sernander'>rutger-sernander</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q919826#P119'>WD Q919826</a></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <td>Sixtus Janson</td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sixtus-janson'>sixtus-janson</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q38772992#P119'>WD Q38772992</a></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>109</th>\n",
-       "      <td>Sonja Lyttkens</td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sonja-lyttkens'>sonja-lyttkens</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q19844789#P119'>WD Q19844789</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>110</th>\n",
-       "      <td>Svante Arrhenius</td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/svante-arrhenius'>svante-arrhenius</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q80956#P119'>WD Q80956</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q38772992#P119'>WD Q38772992</a></td>\n",
+       "      <td>Sixtus Janson</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sixtus-janson'>sixtus-janson</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>111</th>\n",
-       "      <td>Sven Anders Hägg</td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-anders-hagg'>sven-anders-hagg</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q99485352#P119'>WD Q99485352</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q19844789#P119'>WD Q19844789</a></td>\n",
+       "      <td>Sonja Lyttkens</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sonja-lyttkens'>sonja-lyttkens</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>112</th>\n",
-       "      <td>Sven Lilja</td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-lilja'>sven-lilja</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q5951505#P119'>WD Q5951505</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q80956#P119'>WD Q80956</a></td>\n",
+       "      <td>Svante Arrhenius</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/svante-arrhenius'>svante-arrhenius</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>113</th>\n",
-       "      <td>Thekla Knös</td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/thekla-knos'>thekla-knos</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q4959294#P119'>WD Q4959294</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q99485352#P119'>WD Q99485352</a></td>\n",
+       "      <td>Sven Anders Hägg</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-anders-hagg'>sven-anders-hagg</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>114</th>\n",
-       "      <td>Topper Martyn</td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/topper-martyn'>topper-martyn</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q5978552#P119'>WD Q5978552</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q5951505#P119'>WD Q5951505</a></td>\n",
+       "      <td>Sven Lilja</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-lilja'>sven-lilja</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>115</th>\n",
-       "      <td>Tycho Hedén</td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/tycho-heden'>tycho-heden</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q5795469#P119'>WD Q5795469</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q4959294#P119'>WD Q4959294</a></td>\n",
+       "      <td>Thekla Knös</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/thekla-knos'>thekla-knos</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>116</th>\n",
-       "      <td>Ulla-Bella Fridh</td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/ulla-bella-fridh-gabrielsson'>ulla-bella-fridh-gabrielsson</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q4948950#P119'>WD Q4948950</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q5978552#P119'>WD Q5978552</a></td>\n",
+       "      <td>Topper Martyn</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/topper-martyn'>topper-martyn</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>117</th>\n",
-       "      <td>Uno von Troil</td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/uno-von-troil'>uno-von-troil</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q943803#P119'>WD Q943803</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q5795469#P119'>WD Q5795469</a></td>\n",
+       "      <td>Tycho Hedén</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/tycho-heden'>tycho-heden</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>118</th>\n",
-       "      <td>Viktor Persson</td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/viktor-persson'>viktor-persson</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q6043915#P119'>WD Q6043915</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q4948950#P119'>WD Q4948950</a></td>\n",
+       "      <td>Ulla-Bella Fridh</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/ulla-bella-fridh-gabrielsson'>ulla-bella-fridh-gabrielsson</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>119</th>\n",
-       "      <td>Vivi Laurent-Täckholm</td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/vivi-tackholm'>vivi-tackholm</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q4983741#P119'>WD Q4983741</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q943803#P119'>WD Q943803</a></td>\n",
+       "      <td>Uno von Troil</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/uno-von-troil'>uno-von-troil</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>120</th>\n",
-       "      <td>Yngve Svalander</td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/yngve-svalander'>yngve-svalander</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q6197251#P119'>WD Q6197251</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q6043915#P119'>WD Q6043915</a></td>\n",
+       "      <td>Viktor Persson</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/viktor-persson'>viktor-persson</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>121</th>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q4983741#P119'>WD Q4983741</a></td>\n",
+       "      <td>Vivi Laurent-Täckholm</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/vivi-tackholm'>vivi-tackholm</a></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q6197251#P119'>WD Q6197251</a></td>\n",
+       "      <td>Yngve Svalander</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/yngve-svalander'>yngve-svalander</a></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q13390628#P119'>WD Q13390628</a></td>\n",
        "      <td>Åke Holm</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/ake-holm'>ake-holm</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q13390628#P119'>WD Q13390628</a></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -428,7 +420,9 @@
     "WDKulturGravar[\"kulturperson\"] = \"<a href='https://kulturpersoner.uppsalakyrkogardar.se/\" + WDKulturGravar['href'].astype(str) + \"'>\" + WDKulturGravar['href'].astype(str) + \"</a>\"\n",
     "\n",
     "pd.set_option(\"display.max.columns\", None) \n",
-    "HTML(WDKulturGravar[{'WD','personLabel','kulturperson'}].tail(15).to_html(escape=False))\n"
+    "#HTML(WDKulturGravar[{'WD','personLabel','kulturperson'}].tail(15).to_html(escape=False)) \n",
+    "HTML(WDKulturGravar[['WD', 'personLabel', 'kulturperson']].tail(15).to_html(escape=False))\n",
+    "\n"
    ]
   },
   {
@@ -465,10 +459,11 @@
     {
      "data": {
       "text/plain": [
-       "both                 128\n",
-       "Kulturgravar_only      4\n",
+       "Kulturgravar_Wikidata\n",
+       "both                 132\n",
+       "Kulturgravar_only      3\n",
        "Wikidata_only          1\n",
-       "Name: Kulturgravar_Wikidata, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
      "execution_count": 10,
@@ -495,7 +490,7 @@
     {
      "data": {
       "text/plain": [
-       "5"
+       "4"
       ]
      },
      "execution_count": 11,
@@ -516,11 +511,10 @@
     {
      "data": {
       "text/plain": [
-       "29     https://kulturpersoner.uppsalakyrkogardar.se/e...\n",
-       "129                                                  NaN\n",
-       "130                                                  NaN\n",
-       "131                                                  NaN\n",
-       "132                                                  NaN\n",
+       "30     https://kulturpersoner.uppsalakyrkogardar.se/e...\n",
+       "133                                                  NaN\n",
+       "134                                                  NaN\n",
+       "135                                                  NaN\n",
        "Name: refURL, dtype: object"
       ]
      },
@@ -552,7 +546,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 4 entries, 129 to 132\n",
+      "Index: 3 entries, 133 to 135\n",
       "Data columns (total 9 columns):\n",
       " #   Column                 Non-Null Count  Dtype \n",
       "---  ------                 --------------  ----- \n",
@@ -560,13 +554,13 @@
       " 1   qid                    0 non-null      object\n",
       " 2   personLabel            0 non-null      object\n",
       " 3   refURL                 0 non-null      object\n",
-      " 4   href                   4 non-null      object\n",
+      " 4   href                   3 non-null      object\n",
       " 5   WD                     0 non-null      object\n",
       " 6   kulturperson           0 non-null      object\n",
-      " 7   kulturgravname         4 non-null      object\n",
-      " 8   Kulturgravar_Wikidata  4 non-null      object\n",
+      " 7   kulturgravname         3 non-null      object\n",
+      " 8   Kulturgravar_Wikidata  3 non-null      object\n",
       "dtypes: object(9)\n",
-      "memory usage: 320.0+ bytes\n"
+      "memory usage: 240.0+ bytes\n"
      ]
     }
    ],
@@ -617,11 +611,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Henri Osti</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/henri-osti</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>Egmont Tornberg</td>\n",
        "      <td>https://kulturpersoner.uppsalakyrkogardar.se/egmont-tornberg</td>\n",
        "    </tr>\n",
@@ -633,14 +622,12 @@
        "                  kulturgravname  \\\n",
        "0  Digitala kyrkogårdsvandringar   \n",
        "1                             SV   \n",
-       "2                     Henri Osti   \n",
-       "3                Egmont Tornberg   \n",
+       "2                Egmont Tornberg   \n",
        "\n",
        "                                                             url  \n",
        "0   https://kulturpersoner.uppsalakyrkogardar.se/digitalvandring  \n",
        "1  https://kulturpersoner.uppsalakyrkogardar.se/#weglot_switcher  \n",
-       "2        https://kulturpersoner.uppsalakyrkogardar.se/henri-osti  \n",
-       "3   https://kulturpersoner.uppsalakyrkogardar.se/egmont-tornberg  "
+       "2   https://kulturpersoner.uppsalakyrkogardar.se/egmont-tornberg  "
       ]
      },
      "execution_count": 15,
@@ -649,12 +636,11 @@
     }
    ],
    "source": [
-    "Kulturgravaronly[\"url\"] = \"https://kulturpersoner.uppsalakyrkogardar.se/\" + Kulturgravaronly[\"href\"] \n",
-    "pd.set_option('column_space', 20)\n",
-    "pd.set_option('max_colwidth', 300)\n",
-    "Kulturgravaronly = Kulturgravaronly.reset_index(drop=True)  \n",
+    "Kulturgravaronly[\"url\"] = \"https://kulturpersoner.uppsalakyrkogardar.se/\" + Kulturgravaronly[\"href\"]\n",
+    "pd.set_option('display.max_colwidth', 300)\n",
+    "Kulturgravaronly = Kulturgravaronly.reset_index(drop=True)\n",
     "\n",
-    "Kulturgravaronly[[\"kulturgravname\",\"url\"]]"
+    "Kulturgravaronly[[\"kulturgravname\", \"url\"]]\n"
    ]
   },
   {
@@ -666,8 +652,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2023-02-16 10:00:37.553541\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:07.656590\n"
+      "Ended:  2025-02-11 00:54:19.785945\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:03.583802\n"
      ]
     }
    ],
@@ -676,11 +662,18 @@
     "print(\"Ended: \", end)\n",
     "print('Time elapsed (hh:mm:ss.ms) {}'.format(datetime.now() - start_time))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -694,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
